--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,6 +1,6 @@
 <% layout("layouts/boilerplate") %>
 
-<div class="container p-5">
+<div class="container p-md-5">
     <div class="container smaller-container mb-5 px-5 py-4 rounder border border-2 border-secondary-emphasis">
     
         <h1 class="text-center fs-2 fw-semibold mb-3">Login</h1>
