--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="/stylesheets/stars.css">
 <link rel="stylesheet" href="/stylesheets/app.css">
 
-<div class="container d-flex gap-4 justify-content-center">
-    <div class="w-50 mx-5">
+<div class="container d-md-flex gap-4 justify-content-center">
+    <div class="show-page-card me-5">
         <div class="my-4">
             <% if (campground.images.length) { %>
                 <div id="campgroundsCarousel" class="carousel slide">
@@ -40,8 +40,8 @@
             <% } %>
 
             <div class="border border-2 border-dark-emphasis rounder p-4 text-dark-subtle">
-                <div class="d-flex justify-content-between align-items-center mb-4">
-                    <h5 class="card-title fs-2 fw-semibold">
+                <div class="d-md-flex justify-content-between align-items-center mb-4">
+                    <h5 class="card-title fs-2 fw-semibold mb-1">
                         <%= campground.title %>
                     </h5>
                     <a class="text-decoration-none text-dark" href="/campgrounds"><i class="fa-solid fa-arrow-left"></i> Back to Campgrounds</a>
@@ -53,10 +53,10 @@
 
                 <% if (currentUser && campground.author.equals(currentUser._id)) { %>
                     <div class="card-body d-flex mt-3">
-                        <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-primary me-2 rounder shadow w-25"><i
+                        <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-primary me-2 rounder shadow w-25 fw-semibold"><i
                                 class="fa-solid fa-pen"></i> Edit</a>
                         <form class="w-50" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                            <button class="card-link btn btn-danger rounder shadow w-50"><i class="fa-solid fa-trash"></i> Delete</button>
+                            <button class="card-link btn btn-danger rounder shadow w-50 fw-semibold"><i class="fa-solid fa-trash"></i> Delete</button>
                         </form>
                     </div>
                 <% } %>
@@ -85,17 +85,17 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="body">Write your review</label>
-                        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+                        <textarea class="form-control rounder" name="review[body]" id="body" cols="30" rows="3" required></textarea>
                         <div class="valid-feedback">Looks good!</div>
                         <div class="invalid-feedback">Please write a review before submitting</div>
                     </div>
-                    <button class="btn btn-success rounder shadow w-25">Submit</button>
+                    <button class="btn btn-success rounder shadow w-25 fw-semibold">Submit</button>
                 </form>
             </div>
         <% } %>
         
         
-        <div class="card mb-3 p-4 rounder">
+        <div class="border border-2 bprder-dark-emphasis mb-3 p-4 rounder">
             <h2 class="fw-semibold fs-4">Camper reviews</h2>
             <% if (campground.reviews.length !==0) { %>
                 <p>Rated by fellow adventurers to ensure you have the best camping experience!</p>
@@ -113,7 +113,7 @@
                         </p>
                         <% if (currentUser && review.author.equals(currentUser._id)) { %>
                             <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                                <button class="btn btn-sm btn-danger card-link rounder shadow mb-3 w-25"><i
+                                <button class="btn btn-sm btn-danger card-link rounder shadow mb-3 w-25 fw-semibold"><i
                                         class="fa-solid fa-trash"></i> Delete</button>
                             </form>
                         <% } %>
@@ -125,7 +125,7 @@
         </div>
     </div>
 
-    <div class="w-25 my-4">
+    <div class="show-page-map my-4">
         <h4 class="fw-semibold">Where you'll be</h4>
         <p>Your campsite location in Maps</p>
         <div id='map' class="rounded mb-5"></div>
