--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,12 +14,12 @@
 </head>
 
 <body class="d-flex text-center text-white bg-dark">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex w-100 h-100 p-md-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
                 <h3 class="float-md-left mb-0"><i class="fa-solid fa-campground"></i> YelpCamp</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <a class="nav-link" href="/campgrounds">Campgrounds</a>
                     <% if(!currentUser) { %>
                         <a class="nav-link" href="/login">Login</a>
@@ -30,7 +30,7 @@
                 </nav>
             </div>
         </header>
-        <main class="px-3">
+        <main class="px-md-3">
             <h1><i class="fa-solid fa-campground"></i> YelpCamp</h1>
             <p> Discover and share your favorite campsites from around the world. <br>
                 Join our community of outdoor enthusiasts and find your next adventure.
