--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 py-3 sticky-top shadow">
+<nav class="navbar navbar-expand-lg navbar-white bg-white px-5 py-3 sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand fw-bold" href="/"><i class="fa-solid fa-campground"></i> YelpCamp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -8,14 +8,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link fw-semibold" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                    <a class="nav-link fw-semibold" href="/campgrounds">Campgrounds</a>
                 </li>
                 <% if (currentUser) { %>
                 <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds/new">New Campground</a>
+                    <a class="nav-link fw-semibold" href="/campgrounds/new">New Campground</a>
                 </li>
                 <% } %>
             </ul>
@@ -23,10 +23,10 @@
 
         <div class="navbar-nav ml-auto">
             <% if (!currentUser) {%>
-            <a class="nav-link" href="/login">Login</a>
-            <a class="nav-link" href="/register">Signup</a>
+            <a class="nav-link fw-semibold px-3 border border-success text-success rounder me-2 mb-2" href="/login">Login</a>
+            <a class="nav-link fw-semibold px-3 bg-success text-white rounder mb-2" href="/register">Signup</a>
             <% } else {%>
-            <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link fw-semibold px-3 border border-success text-success rounder" href="/logout">Logout</a>
             <% }%>
         </div>
     </div>
