replaced dollar with rupee

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -28,7 +28,7 @@
                 <div class="mb-3">
                     <label class="form-label text-secondary fw-semibold" for="price">Price</label>
                     <div class="input-group">
-                        <span class="input-group-text" id="price-label">$</span>
+                        <span class="input-group-text" id="price-label">₹</span>
                         <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00"
                             value="<%= campground.price %>" required>
                         <div class="valid-feedback">Looks good!</div>
