--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -37,7 +37,7 @@
                         </small>
                     </p>
                     <p class="fw-semibold">
-                        $<%= campground.price %>/night
+                        ₹<%= campground.price %>/night
                     </p>
                 </div>
                 <!-- <a class="btn btn-primary rounder shadow" href="/campgrounds/<%= campground._id %>">View more <i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
