--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -47,7 +47,7 @@
                     <a class="text-decoration-none text-dark" href="/campgrounds"><i class="fa-solid fa-arrow-left"></i> Back to Campgrounds</a>
                 </div>
                 <h5 class="fw-semibold mb-4"><i class="fa-solid fa-location-dot"></i> <%= campground.location %></h5>
-                <h5 class="fw-semibold mb-4">$<%= campground.price %>/night</h5>
+                <h5 class="fw-semibold mb-4">₹<%= campground.price %>/night</h5>
                 <p class=""><%= campground.description %></p>
                 <p>Submitted by <%= campground.author.username %></p>
 
